v2.0.0/product-specifications/core-functions/5.-print-certificate.md
---
metaLinks:
  alternates:
    - >-
      https://app.gitbook.com/s/RziAMaeBMeyiTg5hfFq5/product-specifications/core-functions/5.-print-certificate
---

# 5. Print certificate

A vital event certificate is a critical legal document, proving the occurrence and pertinent details of the vital event. A birth certificate is a child's first right and proof of legal identity.

OpenCRVS provides an issuance process that checks the collector's ID, provides for the collection of payment and printing of a paper certificate either issuance for a customer in-person or in advance.

### **Configuration options:**

* Customise the certificate template
* Enable/disable printing off in advance of issuance
* Set certification fees for printing within legally specified time, delayed and late

### **Pre-condition**

A record is in the Ready for print workqueue with the status ‘Registered’

### **Triggers**

A user with the`scope:record.registered.print&issue-certified-copies[event=event]` assigns and downloads the record in the Ready to print workqueue

### **Standard flow**

1. User navigates to Ready for Print workqueue
2. User assigns themselves to the record
3. Record is downloaded and is now available to be printed and issued offline
4. User clicks “Print”
5. User selects who is collecting the certificate
   1. For a birth record this could be the Mother, Father or Informant
   2. If Someone else is collecting the certificate. Then the user captures their details.
6. User checks the collectors ID against the details captured in the record
7. User confirms the collectors proof of ID match
   1. If they don’t the user is warned that by proceed, they will be responsible for issuing a certificate without the necessary proof of ID from the collector
8. User is prompted to collect payment if fess are required (based on system configuration)
9. User reviews the certificate preview
10. User confirms certificate details are correct and clicks “Print”
11. A new tab opens with the certificate as a pdf for the user to print
12. User is navigated back to Ready to Print workqueue
13. Record is sent to the Outbox for processing
14. Once processed the record status is updated to ‘Issued’

### **Post conditions**

* Record is removed from all workqueues but can be search for using tracking id, reg no. etc.
* Record audit is updated to show that the record has been ‘Certified’ and ‘Issued’

{% embed url="https://youtu.be/UVCjQT6y4ik" %}
